--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -64,6 +64,7 @@
         </form>
     </div>
     <div class="border-top pt-3">
+<!--        test muted specifies such color so that our text becomes less prominent-->
         <small class="text-muted">
             Already have an account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
         </small>
